--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,4 +175,8 @@
     <!-- Transition Strings -->
     <string name="transition_recipe_image">tn_recipe_image</string>
     <string name="title_activity_search">ActivitySearch</string>
+
+    <!-- Intent extras -->
+    <string name="extra_url">extra_recipe_url</string>
+    <string name="extra_time">time_in_millis</string>
 </resources>
