--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,8 @@
     <string name="pref_cholesterol_key" translatable="false">cholesterol</string>
     <string name="pref_sodium_key" translatable="false">sodium</string>
 
+    <string name="pref_last_sync" translatable="false">last_sync</string>
+
     <string name="my_recipes_key">my_recipes</string>
     <string name="title_activity_create_recipe">CreateRecipeActivity</string>
 
