Add error-handling when failing to import recipes
Now displays a ProgressBar while syncing so users are informed of
activity. If recipes fail to import, then an error message is displayed
indicating the cause of the error.

The variable for last sync is now only updated on successful import of
recipes instead of when sync is initiated.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,4 +185,9 @@
 
     <!-- Intent Filters -->
     <string name="intent_filter_sync_finished">project.hnoct.kitchen.ON_FINISH_SYNC</string>
+
+    <!-- Error Handling -->
+    <string name="error_empty">Please wait while recipes are imported.</string>
+    <string name="error_network_down">Error connecting to the site.\nPlease check network connectivity!</string>
+    <string name="error_unknown">Unknown error attempting to import recipes.\nPlease contact the developer!</string>
 </resources>
