Alter ActivityRecipeDetails layout
Now using CollapsingToolbarLayout that includes the recipe image. The
image view uses parallax scrolling to hide the image view as the
NestedScrollView holding the Fragment is scrolled up. The toolbar itself
will change from transparent to colored as the user scrolls down to
remain visible.

Also added Snackbar to inform the user of lack of network connectivity
when there are already recipes in the database in ActivityRecipeList.

Added Snackbar to inform user of lack of network connectivity when
attempting to view recipe details that have not been imported yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,4 +190,9 @@
     <string name="error_empty">Please wait while recipes are imported.</string>
     <string name="error_network_down">Error connecting to the site.\nPlease check network connectivity!</string>
     <string name="error_unknown">Unknown error attempting to import recipes.\nPlease contact the developer!</string>
+    <string name="error_last_sync">Failed to sync! Last sync occurred %s ago. Connect to a network to import latest recipes.</string>
+    <string name="day_singular">day</string>
+    <string name="day_multiple">days</string>
+    <string name="hour_singular">hour</string>
+    <string name="hour_multiple">hours</string>
 </resources>
