Optimize image loading in ActivityRecipeDetails
Previously, the image URL was obtained by querying the database for the
URL, this meant that when searching for recipes when no entries are
created for the recipes in the database, no image was ever loaded into
the ImageView. This prevented the window transition from initiating and
loading the rest of the recipe information into view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,6 +182,7 @@
     <!-- Intent extras -->
     <string name="extra_url">extra_recipe_url</string>
     <string name="extra_time">time_in_millis</string>
+    <string name="extra_image">recipe_image</string>
 
     <!-- Intent Filters -->
     <string name="intent_filter_sync_finished">project.hnoct.kitchen.ON_FINISH_SYNC</string>
