Add message to inform user to create a recipe book
Added a CardView containing a TextView informing the user that they can
create a new recipe book utilizing the FAB if there are no recipe books
present in ActivityRecipeBook.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,4 +212,7 @@
     <string name="dialog_confirm_delete_recipe_book">Are you sure you want to remove this recipe book and all its contents?</string>
     <string name="dialog_confirm_delete_recipe">Are you sure you want to remove this recipe and all its contents?</string>
 
+    <!-- Text Cards -->
+    <string name="favorites_empty_card">Favorite a recipe to see it here!</string>
+    <string name="recipe_book_empty_card">Create a recipe book with the button below!</string>
 </resources>
