Set ImportRecipeDialog to utilize GenericRecipeAsyncTask
Now when importing a recipe from a website, GenericRecipeAsyncTask is
used if not one of the preferred AsyncTasks are usable. If there is an
error loading the recipe, then a Toast will show to inform the user.
Upon successful importation of the recipe, a Snackbar will show at the
bottom of ActivityRecipeDetails allowing the user a change to edit the
recipe if it does not look correct.

TODO: Snackbar button still needs to be set correctly to launch
ActivityCreateRecipe.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,6 +192,7 @@
     <string name="extra_url">extra_recipe_url</string>
     <string name="extra_time">time_in_millis</string>
     <string name="extra_image">recipe_image</string>
+    <string name="extra_generic_boolean">is_generic</string>
 
     <!-- Intent Filters -->
     <string name="intent_filter_sync_finished">project.hnoct.kitchen.ON_FINISH_SYNC</string>
