Add option to modify a generic recipe when first opened
When the user first imports a generic recipe, it is loaded into
ActivityRecipeDetails. However, because the algorithm is not perfect,
there will often be times where the description is too long, the
ingredients are incorrect, etc. A Snackbar was added allowing the user
the option to edit the detail from ActivityCreateDetails with the
difference that the original is deleted from the list after they finish
editing it so that there is no copy with a mistake saved.

It is not saved as the original because it is impossible to know what
changes the user is making. If they change even one ingredient or one
direction, then it is no longer the original and should not be saved as
such.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,10 +211,12 @@
     <string name="toast_no_recipe_books">Please create a recipe book first to save this recipe to your recipe book!</string>
     <string name="toast_chapter_contains_recipe">This chapter already contains this recipe. Please select another recipe!</string>
     <string name="toast_recipe_in_chapter">This chapter already contains this recipe. Please select another chapter!</string>
+    <string name="toast_unable_to_parse_recipe">"Unable to identify the recipe on the website. \nPlease use our \"Create recipe\" function to import the recipe."</string>
     <string name="dialog_confirm_delete_chapter">Are you sure you want to remove this chapter and all its contents?</string>
     <string name="dialog_confirm_delete_recipe_book">Are you sure you want to remove this recipe book and all its contents?</string>
     <string name="dialog_confirm_delete_recipe">Are you sure you want to remove this recipe and all its contents?</string>
     <string name="dialog_confirm_add_recipe_to_recipe_book">This recipe book already contains a chapter with this recipe. Would you like to continue?</string>
+    <string name="snackbar_check_recipe_details">If the recipe does not look right, please here to edit it.</string>
 
     <!-- Text Cards -->
     <string name="favorites_empty_card">Favorite a recipe to see it here!</string>
