--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,10 @@
     <string name="pref_cholesterol_key" translatable="false">cholesterol</string>
     <string name="pref_sodium_key" translatable="false">sodium</string>
 
+    <!-- Backup Settings -->
+    <string name="pref_backup_title">Backup and Restore</string>
+    <string name="pref_backup_key" translatable="false">backup</string>
+
     <string name="pref_last_sync" translatable="false">last_sync</string>
 
     <string name="my_recipes_key">my_recipes</string>
