--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,6 +99,9 @@
     <string name="pref_backup_key" translatable="false">backup</string>
 
     <string name="pref_last_sync" translatable="false">last_sync</string>
+    
+    <!-- RunOnce Prefs -->
+    <string name="pref_run_once_key" translatable="false">run_once</string>
 
     <string name="my_recipes_key">my_recipes</string>
     <string name="title_activity_create_recipe">CreateRecipeActivity</string>
@@ -235,5 +238,8 @@
     <string name="favorites_empty_card">Favorite a recipe to see it here!</string>
     <string name="recipe_book_empty_card">Create a recipe book with the button below!</string>
     <string name="my_recipes_empty_card">Recipes that you create will show up here.\nCreate one now by clicking the button below!</string>
+
+    <!-- Custom Recipe -->
+    <string name="custom_prefix">custom_</string>
 
 </resources>
